added EntityDataFactorySync to work with EF synchronously

--- a/Docker/ClusterKitVpn/Dockerfile
+++ b/Docker/ClusterKitVpn/Dockerfile
@@ -6,7 +6,8 @@ RUN apk update && \
 COPY ./OpenVpn /etc/openvpn
 COPY ./OpenVpn /etc/openvpn.orig
 #CMD cp /etc/openvpn.orig/openvpn.conf /etc/openvpn/ && openvpn --config /etc/openvpn/openvpn.conf
-CMD cp /etc/openvpn.orig/openvpn.conf /etc/openvpn/ && ovpn_run
+#CMD cp /etc/openvpn.orig/openvpn.conf /etc/openvpn/ && ovpn_run
+CMD ovpn_run
 
 
 
