--- a/ClusterKit.Data/ClusterKit.Data.EF/ClusterKit.Data.EF.csproj
+++ b/ClusterKit.Data/ClusterKit.Data.EF/ClusterKit.Data.EF.csproj
@@ -153,6 +153,7 @@
     <Compile Include="BaseContextFactory.cs" />
     <Compile Include="BaseEntityFrameworkInstaller.cs" />
     <Compile Include="EntityDataFactory.cs" />
+    <Compile Include="EntityDataFactorySync.cs" />
     <Compile Include="Installer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
