--- a/ClusterKit.LargeObjects/ClusterKit.LargeObjects/ClusterKit.LargeObjects.csproj
+++ b/ClusterKit.LargeObjects/ClusterKit.LargeObjects/ClusterKit.LargeObjects.csproj
@@ -146,6 +146,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions.cs" />
+    <Compile Include="INotificationEnveloper.cs" />
     <Compile Include="Installer.cs" />
     <Compile Include="ParcelManagerActor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
