--- a/ClusterKit.Data/ClusterKit.Data.CRUD/ClusterKit.Data.CRUD.csproj
+++ b/ClusterKit.Data/ClusterKit.Data.CRUD/ClusterKit.Data.CRUD.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Exceptions\InsertDuplicateIdException.cs" />
     <Compile Include="Exceptions\ParcelException.cs" />
     <Compile Include="Exceptions\RequestEmptyException.cs" />
+    <Compile Include="ILargeObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
