--- a/ClusterKit.Core/ClusterKit.Core.Service/packages.config
+++ b/ClusterKit.Core/ClusterKit.Core.Service/packages.config
@@ -14,6 +14,7 @@
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="CommonServiceLocator.WindsorAdapter" version="1.0" targetFramework="net46" />
+  <package id="docopt.net" version="0.6.1.9" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
   <package id="Helios" version="2.1.3" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net45" />
