--- a/ClusterKit.Data/ClusterKit.Data.Tests/ClusterKit.Data.Tests.csproj
+++ b/ClusterKit.Data/ClusterKit.Data.Tests/ClusterKit.Data.Tests.csproj
@@ -67,6 +67,22 @@
       <HintPath>..\..\packages\xunit.extensibility.execution.2.2.0-beta2-build3300\lib\net45\xunit.execution.desktop.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
+      <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
+      <Name>ClusterKit.Core</Name>
+</ProjectReference>
+    <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core.TestKit/ClusterKit.Core.TestKit.csproj">
+      <Project>{33F25E93-E58E-4F90-A6EB-E7C64546D732}</Project>
+      <Name>ClusterKit.Core.TestKit</Name>
+</ProjectReference>
+    <ProjectReference Include="../.././ClusterKit.LargeObjects/ClusterKit.LargeObjects.Client/ClusterKit.LargeObjects.Client.csproj">
+      <Project>{7DE19EFC-58C5-4DBF-8A2A-E81E54AF5623}</Project>
+      <Name>ClusterKit.LargeObjects.Client</Name>
+</ProjectReference>
+    <ProjectReference Include="../.././ClusterKit.LargeObjects/ClusterKit.LargeObjects/ClusterKit.LargeObjects.csproj">
+      <Project>{261DFDC5-5107-41B5-A8F4-A34F84D22931}</Project>
+      <Name>ClusterKit.LargeObjects</Name>
+</ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContextFactoryTest.cs" />
@@ -77,22 +93,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\ClusterKit.Core\ClusterKit.Core.TestKit\ClusterKit.Core.TestKit.csproj">
-      <Project>{33f25e93-e58e-4f90-a6eb-e7c64546d732}</Project>
-      <Name>ClusterKit.Core.TestKit</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\ClusterKit.Core\ClusterKit.Core\ClusterKit.Core.csproj">
-      <Project>{ba97beed-b078-499d-8c00-6a3d4a0635f2}</Project>
-      <Name>ClusterKit.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\ClusterKit.LargeObjects\ClusterKit.LargeObjects.Client\ClusterKit.LargeObjects.Client.csproj">
-      <Project>{7de19efc-58c5-4dbf-8a2a-e81e54af5623}</Project>
-      <Name>ClusterKit.LargeObjects.Client</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\ClusterKit.LargeObjects\ClusterKit.LargeObjects\ClusterKit.LargeObjects.csproj">
-      <Project>{261dfdc5-5107-41b5-a8f4-a34f84d22931}</Project>
-      <Name>ClusterKit.LargeObjects</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ClusterKit.Data.CRUD\ClusterKit.Data.CRUD.csproj">
       <Project>{fda59712-9625-4cdf-b8fd-6df19960c8c0}</Project>
       <Name>ClusterKit.Data.CRUD</Name>
