--- a/ClusterKit.Monitoring/ClusterKit.Monitoring/ClusterKit.Monitoring.csproj
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring/ClusterKit.Monitoring.csproj
@@ -33,14 +33,6 @@
     <DocumentationFile>bin\Release\ClusterKit.Monitoring.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\ClusterKit.LargeObjects\ClusterKit.LargeObjects.Client\ClusterKit.LargeObjects.Client.csproj">
-      <Project>{7de19efc-58c5-4dbf-8a2a-e81e54af5623}</Project>
-      <Name>ClusterKit.LargeObjects.Client</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\ClusterKit.LargeObjects\ClusterKit.LargeObjects\ClusterKit.LargeObjects.csproj">
-      <Project>{261dfdc5-5107-41b5-a8f4-a34f84d22931}</Project>
-      <Name>ClusterKit.LargeObjects</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ClusterKit.Monitoring.Client\ClusterKit.Monitoring.Client.csproj">
       <Project>{f3216b61-26c8-4ad6-84df-4531d4c568a2}</Project>
       <Name>ClusterKit.Monitoring.Client</Name>
@@ -224,15 +216,23 @@
     <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
       <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
       <Name>ClusterKit.Core</Name>
-    </ProjectReference>
+</ProjectReference>
     <ProjectReference Include="../.././ClusterKit.Web/ClusterKit.Web.Client/ClusterKit.Web.Client.csproj">
       <Project>{8E543EA4-65DE-475F-8045-C094CDE58E29}</Project>
       <Name>ClusterKit.Web.Client</Name>
-    </ProjectReference>
+</ProjectReference>
     <ProjectReference Include="../.././ClusterKit.Web/ClusterKit.Web/ClusterKit.Web.csproj">
       <Project>{477B201A-A30C-4360-B56A-6F61C049BB04}</Project>
       <Name>ClusterKit.Web</Name>
-    </ProjectReference>
+</ProjectReference>
+    <ProjectReference Include="../.././ClusterKit.LargeObjects/ClusterKit.LargeObjects.Client/ClusterKit.LargeObjects.Client.csproj">
+      <Project>{7DE19EFC-58C5-4DBF-8A2A-E81E54AF5623}</Project>
+      <Name>ClusterKit.LargeObjects.Client</Name>
+</ProjectReference>
+    <ProjectReference Include="../.././ClusterKit.LargeObjects/ClusterKit.LargeObjects/ClusterKit.LargeObjects.csproj">
+      <Project>{261DFDC5-5107-41B5-A8F4-A34F84D22931}</Project>
+      <Name>ClusterKit.LargeObjects</Name>
+</ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actors\ClusterScanActor.cs" />
