--- a/ClusterKit.Web/ClusterKit.Web.Rest/ClusterKit.Web.Rest.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.Rest/ClusterKit.Web.Rest.csproj
@@ -178,7 +178,19 @@
     <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
       <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
       <Name>ClusterKit.Core</Name>
-    </ProjectReference>
+</ProjectReference>
+    <ProjectReference Include="../.././ClusterKit.LargeObjects/ClusterKit.LargeObjects.Client/ClusterKit.LargeObjects.Client.csproj">
+      <Project>{7DE19EFC-58C5-4DBF-8A2A-E81E54AF5623}</Project>
+      <Name>ClusterKit.LargeObjects.Client</Name>
+</ProjectReference>
+    <ProjectReference Include="../.././ClusterKit.LargeObjects/ClusterKit.LargeObjects/ClusterKit.LargeObjects.csproj">
+      <Project>{261DFDC5-5107-41B5-A8F4-A34F84D22931}</Project>
+      <Name>ClusterKit.LargeObjects</Name>
+</ProjectReference>
+    <ProjectReference Include="../.././ClusterKit.Data/ClusterKit.Data.CRUD/ClusterKit.Data.CRUD.csproj">
+      <Project>{FDA59712-9625-4CDF-B8FD-6DF19960C8C0}</Project>
+      <Name>ClusterKit.Data.CRUD</Name>
+</ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseRestController.cs" />
@@ -192,18 +204,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\ClusterKit.Data\ClusterKit.Data.CRUD\ClusterKit.Data.CRUD.csproj">
-      <Project>{fda59712-9625-4cdf-b8fd-6df19960c8c0}</Project>
-      <Name>ClusterKit.Data.CRUD</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\ClusterKit.LargeObjects\ClusterKit.LargeObjects.Client\ClusterKit.LargeObjects.Client.csproj">
-      <Project>{7de19efc-58c5-4dbf-8a2a-e81e54af5623}</Project>
-      <Name>ClusterKit.LargeObjects.Client</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\ClusterKit.LargeObjects\ClusterKit.LargeObjects\ClusterKit.LargeObjects.csproj">
-      <Project>{261dfdc5-5107-41b5-a8f4-a34f84d22931}</Project>
-      <Name>ClusterKit.LargeObjects</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ClusterKit.Web.Client\ClusterKit.Web.Client.csproj">
       <Project>{8e543ea4-65de-475f-8045-c094cde58e29}</Project>
       <Name>ClusterKit.Web.Client</Name>
