--- a/ClusterKit.Data/ClusterKit.Data.CRUD/ClusterKit.Data.CRUD.csproj
+++ b/ClusterKit.Data/ClusterKit.Data.CRUD/ClusterKit.Data.CRUD.csproj
@@ -111,6 +111,14 @@
       <HintPath>..\..\packages\Wire.0.7.1\lib\net45\Wire.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
+      <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
+      <Name>ClusterKit.Core</Name>
+</ProjectReference>
+    <ProjectReference Include="../.././ClusterKit.LargeObjects/ClusterKit.LargeObjects.Client/ClusterKit.LargeObjects.Client.csproj">
+      <Project>{7DE19EFC-58C5-4DBF-8A2A-E81E54AF5623}</Project>
+      <Name>ClusterKit.LargeObjects.Client</Name>
+</ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionMessages\CollectionRequest.cs" />
@@ -133,14 +141,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\ClusterKit.Core\ClusterKit.Core\ClusterKit.Core.csproj">
-      <Project>{ba97beed-b078-499d-8c00-6a3d4a0635f2}</Project>
-      <Name>ClusterKit.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\ClusterKit.LargeObjects\ClusterKit.LargeObjects.Client\ClusterKit.LargeObjects.Client.csproj">
-      <Project>{7de19efc-58c5-4dbf-8a2a-e81e54af5623}</Project>
-      <Name>ClusterKit.LargeObjects.Client</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
