--- a/ClusterKit.Web/ClusterKit.Web.Tests/packages.config
+++ b/ClusterKit.Web/ClusterKit.Web.Tests/packages.config
@@ -24,8 +24,11 @@
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net46" />
   <package id="Serilog" version="2.3.0" targetFramework="net46" />
   <package id="Serilog.Sinks.TextWriter" version="2.1.0" targetFramework="net46" />
   <package id="System.Collections" version="4.3.0" targetFramework="net46" />
