--- a/ClusterKit.Web/ClusterKit.Web.Tests/App.config
+++ b/ClusterKit.Web/ClusterKit.Web.Tests/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <connectionStrings>
+    <add name="redis" connectionString="docker:6379" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
