--- a/ClusterKit.Security/ClusterKit.Security.Client/packages.config
+++ b/ClusterKit.Security/ClusterKit.Security.Client/packages.config
@@ -20,7 +20,7 @@
   <package id="JetBrains.Annotations" version="10.2.1" targetFramework="net452" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
-  <package id="Serilog" version="2.3.0" targetFramework="net452" />
+  <package id="Serilog" version="2.3.0" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Collections" version="4.3.0" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net452" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net452" />
