--- a/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
@@ -240,6 +240,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Auth\AuthenticationTests.cs" />
+    <Compile Include="Auth\AuthorizationTests.cs" />
     <Compile Include="NginxConfiguratorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SwaggerDescriptorTest.cs" />
@@ -254,6 +255,10 @@
     <ProjectReference Include="..\ClusterKit.Web.Authentication\ClusterKit.Web.Authentication.csproj">
       <Project>{4975b025-a1d7-48e8-99d6-96d3722acd78}</Project>
       <Name>ClusterKit.Web.Authentication</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ClusterKit.Web.Authorization\ClusterKit.Web.Authorization.csproj">
+      <Project>{6adfbddf-e452-46fc-a037-6d57300be561}</Project>
+      <Name>ClusterKit.Web.Authorization</Name>
     </ProjectReference>
     <ProjectReference Include="..\ClusterKit.Web.Client\ClusterKit.Web.Client.csproj">
       <Project>{8e543ea4-65de-475f-8045-c094cde58e29}</Project>
