--- a/ClusterKit.Web/ClusterKit.Web.Authorization/ClusterKit.Web.Authorization.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.Authorization/ClusterKit.Web.Authorization.csproj
@@ -200,6 +200,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\RequireClientPrivilegeAttribute.cs" />
+    <Compile Include="Attributes\RequireSessionAttribute.cs" />
+    <Compile Include="Attributes\RequireUserPrivilegeAttribute.cs" />
     <Compile Include="AuthorizedController.cs" />
     <Compile Include="Authorizer.cs" />
     <Compile Include="Configuration.Designer.cs">
