--- a/Docker/ClusterKitManager/fallBackConfiguration.json
+++ b/Docker/ClusterKitManager/fallBackConfiguration.json
@@ -50,7 +50,7 @@
     },
     {
       "BuildDate": null,
-      "Id": "ClusterKit.Web.Authorization",
+      "Id": "ClusterKit.Web.Authentication",
       "Version": "0.0.0-local"
     },
     {
@@ -181,6 +181,11 @@
     {
       "BuildDate": null,
       "Id": "ClusterKit.Web",
+      "Version": "0.0.0-local"
+    },
+    {
+      "BuildDate": null,
+      "Id": "ClusterKit.Web.Authorization",
       "Version": "0.0.0-local"
     },
     {
