--- a/ClusterKit.Security/ClusterKit.Security.Client/ClusterKit.Security.Client.csproj
+++ b/ClusterKit.Security/ClusterKit.Security.Client/ClusterKit.Security.Client.csproj
@@ -137,15 +137,21 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\PrivilegeDescriptionAttribute.cs" />
+    <Compile Include="Attributes\PrivilegesContainerAttribute.cs" />
     <Compile Include="IClient.cs" />
     <Compile Include="IClientProvider.cs" />
+    <Compile Include="Installer.cs" />
     <Compile Include="ITokenManager.cs" />
     <Compile Include="IUser.cs" />
     <Compile Include="MoqTokenManager.cs" />
+    <Compile Include="PrivilegeDescription.cs" />
     <Compile Include="Privileges.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestDescription.cs" />
     <Compile Include="TokenDescription.cs" />
     <Compile Include="UserSession.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
