AAA: fixed mono authentication bug

--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Launcher/App.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Launcher/App.config
@@ -11,6 +11,9 @@
 
     <add key="containerType" value="worker" />
 
+    <add key="apiClientId" value="ClusterKit.NodeManager.Launcher" />
+    <add key="apiClientSecret" value="{49F20BD7-DA51-4A7B-B13F-44881D71D395}" />
+
     <!-- Fallback configuration used in case of nodeManagerUrl is anavailable. This is used for initial cluster start -->
     <add key="fallbackConfiguration" value="fallBackConfiguration.json" />
   </appSettings>
@@ -35,6 +38,10 @@
       <dependentAssembly>
         <assemblyIdentity name="NuGet.Packaging.Core.Types" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
