--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Launcher/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Launcher/packages.config
@@ -3,6 +3,7 @@
   <package id="Akka" version="1.1.3" targetFramework="net46" />
   <package id="Akka.Serialization.Hyperion" version="1.1.3.32-beta" targetFramework="net46" />
   <package id="Hyperion" version="0.9.2" targetFramework="net46" />
+  <package id="JetBrains.Annotations" version="10.2.1" targetFramework="net46" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="NuGet.Client" version="3.5.0" targetFramework="net46" />
