--- a/ClusterKit.Security/ClusterKit.Security.SessionRedis/packages.config
+++ b/ClusterKit.Security/ClusterKit.Security.SessionRedis/packages.config
@@ -21,7 +21,7 @@
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="Serilog" version="2.3.0" targetFramework="net46" />
-  <package id="StackExchange.Redis" version="1.2.0" targetFramework="net46" />
+  <package id="StackExchange.Redis.Mono" version="1.0.0" targetFramework="net46" />
   <package id="System.Collections" version="4.3.0" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net46" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net46" />
