AAA: Node Launcher authentication and authorization

--- a/Docker/ClusterKitManager/ClusterKit.NodeManager.Launcher.exe.config
+++ b/Docker/ClusterKitManager/ClusterKit.NodeManager.Launcher.exe.config
@@ -5,6 +5,10 @@
   </startup>
   <appSettings>
     <add key="nodeManagerUrl" value="http://entry/api/1.x/clusterkit/nodemanager/getConfiguration"/>
+    <add key="authenticationUrl" value="http://entry/api/1.x/security/token" />
+    <add key="apiClientId" value="ClusterKit.NodeManager.Launcher" />
+    <add key="apiClientSecret" value="{49F20BD7-DA51-4A7B-B13F-44881D71D395}" />
+
     <add key="workingDirectory" value="/opt/node"/>
     <add key="startMode" value="cleanStart"/>
     <add key="stopMode" value="CleanRestart"/>
