--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Launcher/App.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Launcher/App.config
@@ -4,7 +4,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <appSettings>
-    <add key="nodeManagerUrl" value="http://entry/nodemanager/getConfiguration" />
+    <add key="nodeManagerUrl" value="http://entry/api/1.x/clusterkit/nodemanager/getConfiguration" />
+    <add key="authenticationUrl" value="http://entry/api/1.x/security/token" />
     <add key="workingDirectory" value="node" />
     <add key="stopMode" value="CleanRestart" />
     <add key="stopAction" value="echo stopped" />
