--- a/ClusterKit.Security/ClusterKit.Security.Client/ClusterKit.Security.Client.csproj
+++ b/ClusterKit.Security/ClusterKit.Security.Client/ClusterKit.Security.Client.csproj
@@ -134,12 +134,13 @@
     <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
       <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
       <Name>ClusterKit.Core</Name>
-</ProjectReference>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\PrivilegeDescriptionAttribute.cs" />
     <Compile Include="Attributes\PrivilegesContainerAttribute.cs" />
     <Compile Include="AuthenticationResult.cs" />
+    <Compile Include="EnPrivilegeTarget.cs" />
     <Compile Include="RefreshTicket.cs" />
     <Compile Include="IClient.cs" />
     <Compile Include="IClientProvider.cs" />
