--- a/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
+++ b/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
@@ -152,7 +152,9 @@
     <Compile Include="ConfigurationUtils.cs" />
     <Compile Include="EnActorType.cs" />
     <Compile Include="IMessageRouter.cs" />
-    <Compile Include="ILoggerConfigurator.cs" />
+    <Compile Include="Log\Constants.cs" />
+    <Compile Include="Log\EnLogRecordType.cs" />
+    <Compile Include="Log\ILoggerConfigurator.cs" />
     <Compile Include="MessageRouter.cs" />
     <Compile Include="Monads\Maybe.cs" />
     <Compile Include="NameSpaceActor.cs" />
@@ -179,6 +181,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
